--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,22 @@ psycopg2-binary
 fpdf
 zipcodes
 requests
-python-dotenv
 openai-whisper
 resend
+reportlab
+python-dotenv
+google-auth
+google-auth-ouahtlib
+streamlit
+openai
+pandas
+stripe
+supabase
+python-dotenv
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+reportlab
+fpdf2
+streamlit-lottie
