Fix: Restore Store descriptions, fix button color, and force sidebar

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -10,3 +10,17 @@ font = "sans serif"
 headless = true
 enableCORS = false
 enableXsrfProtection = false
+
+[browser]
+gatherUsageStats = false
+
+[client]
+showErrorDetails = false
+toolbarMode = "viewer"
+
+[layout]
+wideMode = false
+
+[global]
+# CRITICAL FIX: Force the sidebar to be visible
+showSidebarNavigation = true
