--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,15 +1,7 @@
 [theme]
-base = "light"
-primaryColor = "#2a5298"
-backgroundColor = "#ffffff"
-secondaryBackgroundColor = "#f0f2f6"
-textColor = "#31333F"
-font = "sans serif"
-
-[server]
-headless = true
-enableCORS = false
-enableXsrfProtection = false
-
-[browser]
-gatherUsageStats = false
+base="light"
+primaryColor="#2a5298"
+backgroundColor="#f8f9fc"
+secondaryBackgroundColor="#ffffff"
+textColor="#2d3748"
+font="sans serif"
