--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 streamlit==1.40.0
-streamlit-drawable-canvas
-stripe
+streamlit-drawable-canvas==0.9.3
 supabase
+stripe
+openai-whisper==20250625
+torch==2.0.1
+torchaudio==2.0.2
+numpy>=1.20.0,<2.0.0
 sqlalchemy
 psycopg2-binary
 requests
 resend
-fpdf
+pandas
+fpdf2
 python-dotenv
 openai
-# CRITICAL: Whisper compatibility
-openai-whisper
-numpy<2.0.0
-torch
+tenacity
