--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ streamlit==1.40.0
 streamlit-drawable-canvas==0.9.3
 supabase
 stripe
-openai-whisper
-torch
-numpy<2.0.0
+openai-whisper==20231117
+torch==2.0.1
+torchaudio==2.0.2
+numpy==1.24.3
 sqlalchemy
 psycopg2-binary
 requests
@@ -14,3 +15,4 @@ fpdf2
 python-dotenv
 openai
 tenacity
+ffmpeg-python
