--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,9 @@ streamlit==1.40.0
 streamlit-drawable-canvas==0.9.3
 supabase
 stripe
-openai-whisper==20231117
-torch==2.0.1
-torchaudio==2.0.2
-numpy==1.24.3
+openai-whisper
+torch
+numpy
 sqlalchemy
 psycopg2-binary
 requests
