--- a/.github/workflows/verify_hardening.yml
+++ b/.github/workflows/verify_hardening.yml
@@ -22,7 +22,5 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install pytest pytest-mock
-
 - name: Run Tests
-  run: |
-    PYTHONPATH=. pytest tests/test_hardening.py
+  run: PYTHONPATH=. pytest tests/test_hardening.py
