--- a/.github/workflows/verify_hardening.yml
+++ b/.github/workflows/verify_hardening.yml
@@ -25,5 +25,5 @@ jobs:
 
       - name: Run Tests
         run: |
-          # THE FIX: python -m forces the root folder into the search path
+          # FIX: Forces python to look in the current folder for modules like ai_engine
           python -m pytest tests/test_hardening.py
